--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1506,13 +1506,17 @@
       },
       "source": [
         "**Answer:**\n",
-        "Logistics Regressio :\n",
+        "* **Logistics Regression :**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         " we have a bunch of information about people who have donated in the past, like their age, income, and education level.\n",
         "\n",
         "we can use this information to train a model that can predict whether a new person is likely to donate. The model works by comparing the new person to people in the past who have similar characteristics. It then looks at what those similar people did (whether they donated or not) and uses their behavior to predict what the new person might do.\n",
         "\n",
         "\n",
-        "Random Forest:\n",
+        "* **Random Forest: **\n",
         "\n",
         "Imagine you're trying to predict if a new movie will be a hit. You gather information about past movies, such as their genre, director, and budget. A Random Forest model works by creating multiple decision trees, each making a prediction based on different parts of the data.\n",
         "\n",
